--- a/src/.css/Header.css
+++ b/src/.css/Header.css
@@ -1,6 +1,7 @@
 .header {
-    border-style: solid;
-    border-color: red;
-    margin: 10px;
+    margin: 0;
+    width: 100%;
     text-align: center;
+    padding: 10px;
+    box-sizing: border-box;
 }
