--- a/src/.css/NavBar.css
+++ b/src/.css/NavBar.css
@@ -1,7 +1,8 @@
 .navbar {
-    background-color: hsl(300, 26%, 66%);
-    border: solid;
-    border-color: hsl(300, 50%, 50%);;
+    background-color: #9966cc;
+    border: 2px solid #800080;
     border-radius: 10px;
     margin: 10px;
+    padding: 10px;
+    text-align: center;
 }
