--- a/src/.css/App.css
+++ b/src/.css/App.css
@@ -7,6 +7,15 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+header {
+  width: 100%;
+  margin: 0;
+  padding: 2rem 0;
+  background-color: #663399;
+  border-bottom: 4px solid #800080;
+  color: #e6e6ff;
+}
+
 .content-width {
   max-width: 70ch;
   width: calc(100% - 4rem);
@@ -15,15 +24,6 @@ body {
 
 main {
   margin-bottom: 4rem;
-}
-
-header {
-  width: 100%;
-  margin: 0;
-  padding: 2rem 0;
-  background-color: #663399;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  color: #e6e6ff;
 }
 
 header p {
